fix(comms): Vertically center and fix spacing of participant row in private tab

--- a/App/src/assets/scss/_mixins.scss
+++ b/App/src/assets/scss/_mixins.scss
@@ -145,7 +145,6 @@ Adding the class ".flashing" to the element will will animate its border to incr
     }
 
     img {
-        position: relative;
         top: -.1em;
         padding: 0 0.3em;
     }
